--- a/app/js/components/modules/main_idiomas.html
+++ b/app/js/components/modules/main_idiomas.html
@@ -2,4 +2,6 @@
   <button type="button" value="en" class="btn btn-dark btn-xs language"><img src="img/idiomas/b_ingles.png" /></button>
   <button type="button" value="es" class="btn btn-dark btn-xs language"><img src="img/idiomas/b_espanol.png" /></button>
   <button type="button" value="fr" class="btn btn-dark btn-xs language"><img src="img/idiomas/b_frances.png" /></button>
+  <button type="button" value="de" class="btn btn-dark btn-xs language"><img src="img/idiomas/b_aleman.png" /></button>
+  <button type="button" value="ru" class="btn btn-dark btn-xs language"><img src="img/idiomas/b_ruso.png" /></button>
 </div>
