--- a/app/js/components/modules/main_menu.html
+++ b/app/js/components/modules/main_menu.html
@@ -4,7 +4,7 @@
     <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
     <ul class="sidebar-nav nav" role="tablist">
         <li class="sidebar-brand">
-            <a href="#inicio">El Método Manniello</a>
+            <a href="#inicio" id="lt-title3">El Método Manniello</a>
         </li>
         <li><a class="option" href="#libro"></a></li>
         <li><a class="option" href="#grupos"></a></li>
